# BT_UART_Gateway

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cpp_rtos.md  generate_docs.sh  sdkconfig  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
components/rtos_cpp/: CMakeLists.txt
components/rtos_cpp/include/: EventFlags.h  MessageQueue.h  Mutex.h  Semaphore.h  Task.h  Timer.h  rtos.h
components/rtos_cpp/include/api/: IItemReceiver.h  IItemSender.h  IMutex.h  ISemaphore.h
components/rtos_cpp/include/util/: Core.h  Flags.h  SharedPin.h  Types.h
components/rtos_cpp/src/: Mutex.cpp  Semaphore.cpp  Task.cpp  Timer.cpp  rtos.cpp
components/rtos_cpp/src/util/: CoreStub.cpp  New.cpp
docs/html/: BLE__Client_8cpp.html  BLE__Client_8cpp__incl.map  BLE__Client_8cpp__incl.md5  BLE__Client_8hpp.html  BLE__Client_8hpp.js  BLE__Client_8hpp__dep__incl.map  BLE__Client_8hpp__dep__incl.md5  BLE__Client_8hpp__incl.map  BLE__Client_8hpp__incl.md5  BLE__Client_8hpp_source.html  BLE__Config_8hpp.html  BLE__Config_8hpp.js  BLE__Config_8hpp__dep__incl.map  BLE__Config_8hpp__dep__incl.md5  BLE__Config_8hpp__incl.map  BLE__Config_8hpp__incl.md5  BLE__Config_8hpp_source.html  BLE__Server_8cpp.html  BLE__Server_8cpp__incl.map  BLE__Server_8cpp__incl.md5  (+701 more)
main/: CMakeLists.txt
main/include/: BLE_Client.hpp  BLE_Config.hpp  BLE_Server.hpp  Bluetooth.hpp  CommandHandler.hpp  DataParser.hpp  MessageHandler.hpp  uart.hpp
main/src/: BLE_Client.cpp  BLE_Server.cpp  Bluetooth.cpp  CommandHandler.cpp  DataParser.cpp  MessageHandler.cpp  main.cpp  uart.cpp
(+100 files in other folders)
